WexGit/Wex_DX/force-app/main/default/objects/WEX_SFDC_Support_Portal_Setting__mdt/fields/Default_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_ID__c</fullName>
    <description>ID of the account to tie all cases to for entitlements</description>
    <label>Default Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>