WexGit/Wex_DX/force-app/main/default/objects/WEX_SFDC_Support_Portal_Setting__mdt/fields/Default_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Hours__c</fullName>
    <label>Default Business Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>