WexGit/Wex_DX/force-app/main/default/objects/WEX_SFDC_Support_Portal_Setting__mdt/fields/Default_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Record_Type__c</fullName>
    <label>Default Case Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>