WexGit/Wex_DX/force-app/main/default/objects/WEX_SFDC_Support_Portal_Setting__mdt/fields/Default_Contact_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Record_Type_ID__c</fullName>
    <label>Default Contact Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>