WexGit/Wex_DX/force-app/main/default/objects/WEX_SFDC_Support_Portal_Setting__mdt/fields/Default_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Default_Entitlement__c</fullName>
    <label>Default Entitlement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>